Chanel Coding type not set correctly for UHBR 128/132b for MST branch devices
We set the Channel coding type as 128/132 fro UHBR in register 0x108 as part of intel_dp_update_downspread_ctrl() function call before link training. So UHBR works with a cable directly connected to the monitor.
But when we tested with Synaptics hub in the path, with a branch device in the path, they expect the driver to set this channel coding type at the enum resource allocation for branch device without which they would default to 8/10. This needs to be fixed in i915 driver.
This is the fix that is required in the driver: Before the driver send out the ENUM_PATH_RESOURCES message, the source need let branch device know the channel coding type at least set DPCD 0x108