FROMGIT: drm/i915/dp_mst: Enable link training fallback for MST

Reduce the link parameters after a link training failure for MST
outputs, similarly to how this is done for SST.

For now allow the reduction only by staying in the 8b/10b vs. 128b/132b
mode. Enabling the mode switch is left for a follow-up patchset, after
taking measures ensuring that the mode switch happens properly. In
particular a rediscovery of the whole MST topology may be required for
such a switch, see the References below.

Link: https://gitlab.freedesktop.org/drm/i915/kernel/-/issues/10970
Reviewed-by: Ville Syrjälä <ville.syrjala@linux.intel.com>
Signed-off-by: Imre Deak <imre.deak@intel.com>
Link: https://patchwork.freedesktop.org/patch/msgid/20240610164933.2947366-17-imre.deak@intel.com
(cherry picked from commit 73afc1e2fd1d3b3f086a4ba1714c8d1ecc40d4f9
 https://anongit.freedesktop.org/git/drm-intel.git drm-intel-next)

BUG=b:322223603
TEST=Ensure proper link training fallback mechanism for DP2.1

Change-Id: I5195f18d2827b9bb8d856ca12e82e0d88bc22cf6
Signed-off-by: Rakshith M O <rakshith.m.o@intel.com>
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/third_party/kernel/+/5648364
Reviewed-by: Sean Paul <sean@poorly.run>
Commit-Queue: Gil Dekel <gildekel@chromium.org>
Tested-by: Waheem Md <waheem.md@intel.com>
Reviewed-by: Gil Dekel <gildekel@chromium.org>
Signed-off-by: Hubert Mazur <hmazur@google.com>