drivers/gpu/drm/i915/display/intel_dp.c
@@ -5778,11 +5778,7 @@ intel_dp_detect(struct drm_connector *connector,
 
 	intel_dp_configure_mst(intel_dp);
 
-	/*
-	 * TODO: Reset link params when switching to MST mode, until MST
-	 * supports link training fallback params.
-	 */
-	if (intel_dp->reset_link_params || intel_dp->is_mst) {
+	if (intel_dp->reset_link_params) {
 		intel_dp_reset_link_params(intel_dp);
 		intel_dp->reset_link_params = false;
 	}
